--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ content="Orbit, SpaceHub, Roblox Script, SpaceHub Script, Orbit Executor, Orbit 
     <section class="banner-section">
       <div class="container">
         <div class="banner-content-wrapper">
-          <h1 class="banner-title"><span class="banner-title-marked">Orbit,</span> Simply The Best.
+          <h1 class="banner-title"><span class="banner-title-marked">Unhx,</span> Simply The Best.
           </h1>
           <p class="banner-details">Welcome to the Orbit Site, at Orbit we want to help you improve your gaming experiences to the max! That is why we are producing high quality script daily.</p>
           <div class="_2-buttons-wrap"><a href="https://orbituniverse.com/download" target="_blank"
